[package]
name = "uasync"
version = "0.0.0"
edition = "2021"

[[bench]]
name = "executor"
harness = false

[dev-dependencies]
bencher = "0.1"
num_cpus = "1"
easy-parallel = "3"
futures-lite = "1"
async-channel = "1"
async-executor = "1"
async-task = "4"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }