[package]
name = "uasync"
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kprotty/uasync/"
description = "fast, safe, async executor"
documentation = "https://docs.rs/uasync"
keywords = ["asynchronous", "executor", "spawn"]
categories = ["asynchronous", "concurrency"]

[[bench]]
name = "executor"
harness = false

[dev-dependencies]
bencher = "0.1"
num_cpus = "1"
easy-parallel = "3"
futures-lite = "1"
async-channel = "1"
async-executor = "1"
async-task = "4"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }