[package]
name = "uasync"
version = "0.3.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kprotty/uasync/"
description = "no_std, async compatible, synchronization primitives"
documentation = "https://docs.rs/uasync"
keywords = ["asynchronous"]
categories = ["asynchronous", "concurrency"]
